Increase button width to prevent button text from being cut off in WP 3.8+.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@818850 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -102,7 +102,7 @@
 	clear: both;
 	display: block;
 	margin: 4px;
-	width: 120px;
+	width: 130px;
 }
 
 #ws_menu_editor #ws_save_menu {
